# aria-underlay

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODOS.md  build.rs
adapter-python/: README.md  pyproject.toml
adapter-python/aria_underlay_adapter/: artifact_store.py  config.py  diff.py  errors.py  model_profile.py  normalization.py  normalize.py  rollback.py  secret_provider.py  server.py  state.py
adapter-python/aria_underlay_adapter/acceptance/: __init__.py  offline_h3c.py
adapter-python/aria_underlay_adapter/backends/: base.py  gnmi_capabilities.py  mock_netconf.py  napalm_backend.py  netconf.py  netconf_errors.py  netconf_hostkey.py  netconf_model_profile.py  netconf_state.py  netmiko_backend.py  yang_schema.py
adapter-python/aria_underlay_adapter/drivers/: __init__.py  base.py  cisco.py  error.py  fake.py  h3c.py  huawei.py  legacy_cli.py  netconf_backed.py  ruijie.py  unsupported.py
adapter-python/aria_underlay_adapter/proto/: __init__.py
adapter-python/aria_underlay_adapter/renderers/: __init__.py  base.py  common.py  h3c.py  huawei.py  registry.py  snapshot.py  xml.py
adapter-python/aria_underlay_adapter/state_parsers/: __init__.py  base.py  (+6 more)
adapter-python/tests/: test_artifact_store.py  test_config.py  test_driver_registry.py  test_fake_driver.py  test_gnmi_capabilities.py  test_mock_netconf_backend.py  test_model_profile.py  test_netconf_backend.py  test_offline_h3c_acceptance.py  test_package_hygiene.py  test_real_device_cleanup_script.py  test_renderer_registry.py  test_renderer_snapshot.py  test_renderers.py  test_sample_collector.py  test_secret_provider.py  test_server_renderer_selection.py  test_state_parser_registry.py  test_state_parser_validator.py  test_state_parsers.py  test_tls.py  test_yang_schema.py
(+305 files in other folders)
