[package]
name = "aria_underlay"
version = "0.1.0"
edition = "2021"

[lib]
name = "aria_underlay"
path = "src/lib.rs"

[[bin]]
name = "aria-underlay-worker"
path = "src/bin/aria_underlay_worker.rs"

[dependencies]
async-trait = "0.1"
dashmap = "6"
prost = "0.13"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

[build-dependencies]
tonic-build = "0.12"
