[project]
name = "aria-underlay-adapter"
version = "0.1.0"
description = "Python southbound adapter for Aria Underlay"
requires-python = ">=3.10"
dependencies = [
  "grpcio",
  "grpcio-tools",
  "protobuf",
  "ncclient",
  "pydantic",
  "structlog",
]

[project.optional-dependencies]
fallback = [
  "napalm",
  "netmiko",
]
test = [
  "pytest",
]

[project.scripts]
aria-underlay-render-snapshot = "aria_underlay_adapter.renderers.snapshot:main"
aria-underlay-state-parse = "aria_underlay_adapter.state_parsers.validator:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
